<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".results_Activity">

    <TextView
        android:id="@+id/tvResults"
        android:layout_width="311dp"
        android:layout_height="175dp"
        android:layout_marginTop="244dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/resultsTV"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMainPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickGoToMainActivity"
        android:text="@string/mainPageBTN"
        app:backgroundTint="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResults" />

    <ImageView
        android:id="@+id/ivMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/money_imageView_Hint"
        app:layout_constraintBottom_toTopOf="@+id/tvResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/money" />
</androidx.constraintlayout.widget.ConstraintLayout>